force-app/main/default/objects/Electronics_shop__c/Electronics_shop__c.object-meta.xml
<CustomObject>
    <label>Electronics shop</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Item no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Electronic shops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>