force-app/main/default/objects/Electronics_shop__c/fields/aggregate_text__c.field-meta.xml
<CustomField>
    <fullName>aggregate_text__c</fullName>
    <label>aggregate text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>