force-app/main/default/objects/Electronics_shop__c/fields/Bank_Transcation__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transcation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Transcation</label>
    <referenceTo>Bank_Transcation__c</referenceTo>
    <relationshipLabel>Electronic shops</relationshipLabel>
    <relationshipName>Electronic_shops</relationshipName>
    <type>Lookup</type>
</CustomField>