force-app/main/default/objects/Electronics_shop__c/fields/capacity__c.field-meta.xml
<CustomField>
    <fullName>capacity__c</fullName>
    <label>capacity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5 litre</fullName>
            </value>
            <value>
                <fullName>8 litre</fullName>
            </value>
            <value>
                <fullName>10 litre</fullName>
            </value>
            <value>
                <fullName>15 litre</fullName>
            </value>
            <value>
                <fullName>20 litre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>