force-app/main/default/objects/Electronics_shop__c/fields/channel__c.field-meta.xml
<CustomField>
    <fullName>channel__c</fullName>
    <label>channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15 channel</fullName>
            </value>
            <value>
                <fullName>25 channel</fullName>
            </value>
            <value>
                <fullName>30 channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>