force-app/main/default/objects/Electronics_shop__c/fields/Electronics_shop__c.field-meta.xml
<CustomField>
    <fullName>Electronics_shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Electronics shop</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Refg1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Electronics_shop__c</referenceTo>
    <relationshipLabel>Electronic shops</relationshipLabel>
    <relationshipName>Electronic_shops</relationshipName>
    <type>Lookup</type>
</CustomField>