force-app/main/default/objects/Electronics_shop__c/fields/For_aggregate__c.field-meta.xml
<CustomField>
    <fullName>For_aggregate__c</fullName>
    <formula>Bank_Transcation__r.BankMaster__r.bank_detail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For aggregate</label>
    <type>Text</type>
</CustomField>