force-app/main/default/objects/Electronics_shop__c/fields/level__c.field-meta.xml
<CustomField>
    <fullName>level__c</fullName>
    <label>level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>type_value__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>primary</fullName>
            </value>
            <value>
                <fullName>secondary</fullName>
            </value>
            <value>
                <fullName>teritary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>