force-app/main/default/objects/Electronics_shop__c/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <label>Power</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100 watt</fullName>
            </value>
            <value>
                <fullName>200 watt</fullName>
            </value>
            <value>
                <fullName>300 watt</fullName>
            </value>
            <value>
                <fullName>500 watt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>