force-app/main/default/objects/Electronics_shop__c/fields/screen_size__c.field-meta.xml
<CustomField>
    <fullName>screen_size__c</fullName>
    <label>screen size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18 inch</fullName>
            </value>
            <value>
                <fullName>21 inch</fullName>
            </value>
            <value>
                <fullName>32 inch</fullName>
            </value>
            <value>
                <fullName>42 inch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>