force-app/main/default/objects/Electronics_shop__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>single door</fullName>
            </value>
            <value>
                <fullName>double door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>