force-app/main/default/objects/Electronics_shop__c/fields/type_value__c.field-meta.xml
<CustomField>
    <fullName>type_value__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>basic</fullName>
            </value>
            <value>
                <fullName>advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>