force-app/main/default/objects/Electronics_shop__c/recordTypes/Ref.recordType-meta.xml
<RecordType>
    <fullName>Ref</fullName>
    <active>true</active>
    <label>Ref.</label>
</RecordType>