force-app/main/default/objects/Electronics_shop__c/recordTypes/Refg1.recordType-meta.xml
<RecordType>
    <fullName>Refg1</fullName>
    <active>true</active>
    <label>Refg1</label>
</RecordType>